cka-example-yaml/example-14/back-pod-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-pod-networkpolicy
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: back
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: ns2
    - podSelector:
        matchLabels:
          app: front
    - ipBlock:
        cidr: 192.168.2.0/8
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector: {}
