cka-example-yaml/example-14/my-deny-all-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ns1
spec:
  podSelector: {}    # 命名空间下所有Pod
  policyTypes:
  - Ingress
